# Calculator

./: .gitignore  CMakeLists.txt  ExpressionCalculator.cpp  ExpressionCalculator.h  README.md  calculator_functions.cpp  calculator_functions.h  main.cpp
determine/: checking.cpp  result_generate.cpp  result_generate.h  writing_to_stack.cpp  writing_to_stack.h
stack/: stack.cpp  stack.h
